# manos

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: pipeline.yml
0xPwner/: CMakeLists.txt
0xPwner/algorithms/: foo.cpp
0xPwner/data_structures/: lru_cache.cpp
algorithms/: min.cpp  minmax_element.cpp
fndrd1d1/: CMakeLists.txt
fndrd1d1/algorithms/: min.cpp  minmax_element.cpp
kafteji/: CMakeLists.txt
kafteji/data_structures/lru_cache/: lru_cache.cpp
